spacing fixed

--- a/frontend/src/components/multiplaylist.css
+++ b/frontend/src/components/multiplaylist.css
@@ -25,7 +25,7 @@ label {
 }
 
 .left-container {
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.39);
     background-color: black;
     border-radius: 10px;
     padding: 30px;
@@ -48,8 +48,8 @@ label {
     flex-direction: row;
     margin-bottom: 6px;
     height: 17px;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    border-top: 1px solid rgba(255, 255, 255, 0.39);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.39);
     border-radius: 10px;
     font-size: 13.5px;
     cursor: context-menu;
